<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CadastroActivity">

  <LinearLayout android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:padding="32dp"
      android:orientation="vertical"
      android:background="#FFFFFF">

      <TextView
          android:id="@+id/textView_usuario_cadastro"
          android:layout_width="match_parent"
          android:layout_height="17dp"
          android:text="Usuário" />

      <EditText
          android:id="@+id/editText_usuario_cadastro"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/background_caixa_texto"
          android:ems="10"
          android:layout_marginTop="5dp"
          android:inputType="textPersonName"
          android:padding="10dp"
          android:hint="Usuário"/>

      <TextView
          android:id="@+id/textView_email_cadastro"
          android:layout_width="match_parent"
          android:layout_height="17dp"
          android:layout_marginTop="16dp"
          android:text="Email" />

      <EditText
          android:id="@+id/editText_email_cadastro"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/background_caixa_texto"
          android:ems="10"
          android:layout_marginTop="5dp"
          android:inputType="textEmailAddress"
          android:padding="10dp"
          android:textSize="18sp"
          android:hint="Email"/>

      <TextView
          android:id="@+id/textView_senha_cadastro"
          android:layout_width="match_parent"
          android:layout_height="17dp"
          android:layout_marginTop="16dp"
          android:text="Senha" />

      <EditText
          android:id="@+id/editText_senha_cadastro"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/background_caixa_texto"
          android:ems="10"
          android:layout_marginTop="5dp"
          android:inputType="textPassword"
          android:padding="10dp"
          android:textSize="18sp"
          android:hint="Senha" />

      <TextView
          android:id="@+id/textView_confSenha_cadastro"
          android:layout_width="match_parent"
          android:layout_height="17dp"
          android:layout_marginTop="16dp"
          android:text="Confirmar senha" />

      <EditText
          android:id="@+id/editText_confSenha_cadastro"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/background_caixa_texto"
          android:ems="10"
          android:layout_marginTop="5dp"
          android:inputType="textPassword"
          android:padding="10dp"
          android:textSize="18sp"
          android:hint="Confirmar senha"/>

      <Button
          android:id="@+id/button_cadastro"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="Cadastrar-se"
          android:textAllCaps="false"
          android:background="@drawable/background_botao"
          android:padding="10dp"
          android:textColor="#FFFFFF"
          android:textSize="18sp"
          android:layout_marginTop="32dp"/>

  </LinearLayout>
</FrameLayout>