<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="32dp"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/textView_usuario_login"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:text="Usuário" />

        <EditText
            android:id="@+id/editText_usuario_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_caixa_texto"
            android:ems="10"
            android:hint="Usuário"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <TextView
            android:id="@+id/textView_senha_login"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:text="Senha" />

        <EditText
            android:id="@+id/editText_senha_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_caixa_texto"
            android:ems="10"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:padding="10dp"
            android:hint="Senha" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_botao"
            android:padding="10dp"
            android:text="Entrar"
            android:layout_marginTop="32dp"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/textView_cadastre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cadastre-se"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            android:textColor="#1e94d2"
            android:textSize="18sp"/>

    </LinearLayout>
</FrameLayout>