...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout android:layout_width="match_parent"
        android:id="@+id/detalhesCurso"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <TextView
...
